@@ -53,6 +53,11 @@ install -p -m 0644 doc/man/man1/nodeset.1 %{buildroot}/%{_mandir}/man1/
 install -p -m 0644 doc/man/man5/clush.conf.5 %{buildroot}/%{_mandir}/man5/
 install -p -m 0644 doc/man/man5/groups.conf.5 %{buildroot}/%{_mandir}/man5/
 
+# docs and example scripts
+install -d %{buildroot}/%{_defaultdocdir}/%{name}-%{version}/examples
+install -p -m 0644 README ChangeLog Licence_CeCILL-C_V1-en.txt Licence_CeCILL-C_V1-fr.txt %{buildroot}/%{_defaultdocdir}/%{name}-%{version}/
+install -p -m 0755 doc/examples/*.py %{buildroot}/%{_defaultdocdir}/%{name}-%{version}/examples/
+
 # vim addons
 %define vimdatadir %{_datadir}/vim/vimfiles
 install -d %{buildroot}/%{vimdatadir}/{ftdetect,syntax}
@@ -66,7 +71,7 @@ rm -rf %{buildroot}
 
 %files
 %defattr(-,root,root,-)
-%doc README ChangeLog Licence_CeCILL-C_V1-en.txt Licence_CeCILL-C_V1-fr.txt
+%doc %{_defaultdocdir}/%{name}-%{version}/
 %{_mandir}/man1/clubak.1*
 %{_mandir}/man1/clush.1*
 %{_mandir}/man1/nodeset.1*
